--- a/index.html
+++ b/index.html
@@ -65,31 +65,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Mariage</a></div>
+						<div id="fh5co-logo"><a href="#fh5co-header">Mariage B&J</a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">Story</a></li>
-							<li class="has-dropdown">
-								<a href="services.html">Services</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
-							<li class="has-dropdown">
-								<a href="gallery.html">Gallery</a>
-								<ul class="dropdown">
-									<li><a href="#">HTML5</a></li>
-									<li><a href="#">CSS3</a></li>
-									<li><a href="#">Sass</a></li>
-									<li><a href="#">jQuery</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="#fh5co-header">Accueil</a></li>
+							<li><a href="#fh5co-couple">Invitation</a></li>
+							<li><a href="#fh5co-event">Programme</a></li>
+							<li><a href="#fh5co-couple-story">Notre histoire</a></li>
+							<li><a href="">Galerie</a></li>
+							<li><a href="contact.html">Honneur</a></li>
+							<li><a href="contact.html">Nous soutenir</a></li>
 						</ul>
 					</div>
 				</div>
@@ -146,16 +132,14 @@
 						<div class="desc-bride">
 							<h3>Bertille Temgoua Ngeminang</h3>
 							<p>Joël est la personne la plus merveilleuse que j'aie jamais rencontrée et je suis si
-								heureuse de passer le reste de ma vie avec lui. Nous avons déjà deux enfants qui nous
-								comblent de bonheur, et nous sommes impatients de fêter cet événement en famille et
-								entourés de nos amis.</p>
+								heureuse de passer le reste de ma vie avec lui. Nous sommes comblés de bonheur, et nous sommes impatients de fêter cet événement avec nos proches!</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/complements/Ndjoundjou\,\ Deido\,\ Douala.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -250,7 +234,7 @@
 					<div class="col-md-12 col-md-offset-0">
 						<ul class="timeline animate-box">
 							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/complements/JoeletBertille_2.jpg);">
+								<div class="timeline-badge" style="background-image:url(images/complements/JoeletBertille_1.jpg);">
 								</div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
@@ -349,8 +333,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-						<span>Our Memories</span>
-						<h2>Wedding Gallery</h2>
+						<span>Quelques images pour illustrer notre histoire</span>
+						<h2>Galerie</h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.</p>
 					</div>
