Fix countdown code

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 							<li><a href="#fh5co-couple">Invitation</a></li>
 							<li><a href="#fh5co-event">Programme</a></li>
 							<li><a href="#fh5co-couple-story">Notre histoire</a></li>
-							<li><a href="">Galerie</a></li>
-							<li><a href="contact.html">Honneur</a></li>
+							<li><a href="#fh5co-gallery">Galerie</a></li>
+							<li><a href="#fh5co-testimonial">Honneur</a></li>
 							<li><a href="contact.html">Nous soutenir</a></li>
 						</ul>
 					</div>
@@ -132,14 +132,16 @@
 						<div class="desc-bride">
 							<h3>Bertille Temgoua Ngeminang</h3>
 							<p>Joël est la personne la plus merveilleuse que j'aie jamais rencontrée et je suis si
-								heureuse de passer le reste de ma vie avec lui. Nous sommes comblés de bonheur, et nous sommes impatients de fêter cet événement avec nos proches!</p>
+								heureuse de passer le reste de ma vie avec lui. Nous sommes comblés de bonheur, et nous
+								sommes impatients de fêter cet événement avec nos proches!</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/complements/Ndjoundjou\,\ Deido\,\ Douala.jpg);">
+		<div id="fh5co-event" class="fh5co-bg"
+			style="background-image:url(images/complements/Ndjoundjou\,\ Deido\,\ Douala.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -234,7 +236,8 @@
 					<div class="col-md-12 col-md-offset-0">
 						<ul class="timeline animate-box">
 							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/complements/JoeletBertille_1.jpg);">
+								<div class="timeline-badge"
+									style="background-image:url(images/complements/JoeletBertille_1.jpg);">
 								</div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
@@ -242,10 +245,10 @@
 										<span class="date">7 février 2015</span>
 									</div>
 									<div class="timeline-body">
-										<p>Ce premier samedi de février, jour si particulier <br>
-											En voiture, Bertille se faisait raccompagner <br>
-											Joël présent juste à côté <br>
-											Ne manqua pas de la remarquer <br>
+										<p>Ce premier samedi de février, jour si particulier, <br>
+											En voiture, Bertille se faisait raccompagner. <br>
+											Joël, présent juste à côté, <br>
+											Ne manqua pas de la remarquer. <br>
 											Par le regard les deux inconnus ont communiqué <br>
 											Et, son numéro sollicité, Bertille n'a pas hésité. <br>
 											C'est ainsi que leur belle histoire a commencé!
@@ -292,7 +295,8 @@
 								</div>
 							</li>
 							<li class="timeline-inverted animate-box">
-								<div class="timeline-badge" style="background-image:url(images/complements/famille_1.jpg);">
+								<div class="timeline-badge"
+									style="background-image:url(images/complements/famille_1.jpg);">
 								</div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
@@ -303,13 +307,15 @@
 										<p>
 											Un enfant nous est né, un fils nous est donné... On l'appela Emmanuel
 											Edgar!
-											Nous l'avons surnommé "notre porte-bonheur", car c'est peu de temps après sa naissance que nous nous sommes installés ensemble.
+											Nous l'avons surnommé "notre porte-bonheur", car c'est peu de temps après sa
+											naissance que nous nous sommes installés ensemble.
 										</p>
 									</div>
 								</div>
 							</li>
 							<li class="animate-box">
-								<div class="timeline-badge" style="background-image:url(images/complements/JoeletBertille_3.jpg);"></div>
+								<div class="timeline-badge"
+									style="background-image:url(images/complements/JoeletBertille_3.jpg);"></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">On s'installe!</h3>
@@ -497,8 +503,8 @@
 				<div class="row">
 					<div class="row animate-box">
 						<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-							<span>Best Wishes</span>
-							<h2>Friends Wishes</h2>
+							<span>Ils nous font l'immense honneur de nous accompagner</span>
+							<h2>Témoins et femmes/hommes d'honneur</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -508,13 +514,27 @@
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
-												<img src="images/couple-1.jpg" alt="user">
+												<img src="images/complements/Stella.jpg" alt="user">
 											</figure>
-											<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+											<span>Stella, <a href="#" class="twitter">Dame d'honneur</a></span>
 											<blockquote>
-												<p>"Far far away, behind the word mountains, far from the countries
-													Vokalia and Consonantia, there live the blind texts. Separated they
-													live in Bookmarksgrove right at the coast of the Semantics"</p>
+												<p>Très honorée d'accompagner ma chère Bertille en ce jour si spécial
+													pour elle. J'ai hâte de la voir avec sa bague au doigt! Je souhaite
+													au couple tout le bonheur du monde!</p>
+											</blockquote>
+										</div>
+									</div>
+									<div class="item">
+										<div class="testimony-slide active text-center">
+											<figure>
+												<img src="images/complements/berlotte.jpg" alt="user">
+											</figure>
+											<span>Berlotte, <a href="#" class="twitter">Dame d'honneur</a></span>
+											<blockquote>
+												<p>Je suis tellement heureuse pour Bertille et Joël. Leur couple est une
+													réelle inspiration pour moi. Quand Bertille m'a demandé si je
+													pouvais être sa dame d'honneur, je n'ai pas hésité un seul instant!
+												</p>
 											</blockquote>
 										</div>
 									</div>
@@ -619,8 +639,8 @@
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Are You Attending?</h2>
-						<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+						<h2>Soutenez-nous</h2>
+						<p></p>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -702,7 +722,7 @@
 	<script src="js/main.js"></script>
 
 	<script>
-		var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
+		var d = new Date(new Date("2023-03-25"));
 
 		// default example
 		simplyCountdown('.simply-countdown-one', {
