--- a/index.html
+++ b/index.html
@@ -339,165 +339,19 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-						<span>Quelques images pour illustrer notre histoire</span>
 						<h2>Galerie</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
+						<span>Quelques images pour illustrer notre histoire</span>
 					</div>
 				</div>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
 						<ul id="fh5co-gallery-list">
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-1.jpg); ">
-								<a href="images/gallery-1.jpg">
-									<div class="case-studies-summary">
-										<span>14 Photos</span>
-										<h2>Two Glas of Juice</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-2.jpg); ">
-								<a href="#" class="color-2">
-									<div class="case-studies-summary">
-										<span>30 Photos</span>
-										<h2>Timer starts now!</h2>
-									</div>
-								</a>
-							</li>
-
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-3.jpg); ">
-								<a href="#" class="color-3">
-									<div class="case-studies-summary">
-										<span>90 Photos</span>
-										<h2>Beautiful sunset</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-4.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>12 Photos</span>
-										<h2>Company's Conference Room</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-5.jpg); ">
-								<a href="#" class="color-3">
-									<div class="case-studies-summary">
-										<span>50 Photos</span>
-										<h2>Useful baskets</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-6.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>45 Photos</span>
-										<h2>Skater man in the road</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-7.jpg); ">
-								<a href="#" class="color-4">
-									<div class="case-studies-summary">
-										<span>35 Photos</span>
-										<h2>Two Glas of Juice</h2>
-									</div>
-								</a>
-							</li>
-
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-8.jpg); ">
-								<a href="#" class="color-5">
-									<div class="case-studies-summary">
-										<span>90 Photos</span>
-										<h2>Timer starts now!</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(images/gallery-9.jpg); ">
-								<a href="#" class="color-6">
-									<div class="case-studies-summary">
-										<span>56 Photos</span>
-										<h2>Beautiful sunset</h2>
-									</div>
-								</a>
-							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row">
-					<div class="display-t">
-						<div class="display-tc">
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-users"></i>
-									</span>
-
-									<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Estimated Guest</span>
-
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-user"></i>
-									</span>
-
-									<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">We Catter</span>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-calendar"></i>
-									</span>
-									<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Events Done</span>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6 animate-box">
-								<div class="feature-center">
-									<span class="icon">
-										<i class="icon-clock"></i>
-									</span>
-
-									<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000"
-										data-refresh-interval="50">1</span>
-									<span class="counter-label">Hours Spent</span>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
+		
 		<div id="fh5co-testimonial">
 			<div class="container">
 				<div class="row">
@@ -527,6 +381,17 @@
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
+												<img src="images/complements/laurys.jpg" alt="user">
+											</figure>
+											<span>Laurys, <a href="#" class="twitter">Dame d'honneur</a></span>
+											<blockquote>
+												<p>Que du bonheur de voir mes deux amis s'unir pour la vie!</p>
+											</blockquote>
+										</div>
+									</div>
+									<div class="item">
+										<div class="testimony-slide active text-center">
+											<figure>
 												<img src="images/complements/berlotte.jpg" alt="user">
 											</figure>
 											<span>Berlotte, <a href="#" class="twitter">Dame d'honneur</a></span>
@@ -543,24 +408,20 @@
 											<figure>
 												<img src="images/couple-2.jpg" alt="user">
 											</figure>
-											<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+											<span>Quelqu'un, <a href="#" class="twitter">Témoin de la mariée</a></span>
 											<blockquote>
-												<p>"Far far away, behind the word mountains, far from the countries
-													Vokalia and Consonantia, at the coast of the Semantics, a large
-													language ocean."</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, provident. Lorem ipsum dolor sit amet.</p>
 											</blockquote>
 										</div>
 									</div>
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
-												<img src="images/couple-3.jpg" alt="user">
+												<img src="images/complements/no.jpg" alt="user">
 											</figure>
-											<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+											<span>Individu, <a href="#" class="twitter">Témoin du marié</a></span>
 											<blockquote>
-												<p>"Far far away, far from the countries Vokalia and Consonantia, there
-													live the blind texts. Separated they live in Bookmarksgrove right at
-													the coast of the Semantics, a large language ocean."</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad labore adipisci ipsum architecto distinctio delectus veniam cum enim expedita quam.</p>
 											</blockquote>
 										</div>
 									</div>
@@ -572,75 +433,13 @@
 			</div>
 		</div>
 
-		<div id="fh5co-services" class="fh5co-section-gray">
-			<div class="container">
-
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>We Offer Services</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
-							provident. Odit ab aliquam dolor eius.</p>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-6">
-						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-							<span class="icon">
-								<i class="icon-calendar"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>We Organized Events</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos
-									cumque dicta adipisci architecto culpa amet.</p>
-							</div>
-						</div>
-
-						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-							<span class="icon">
-								<i class="icon-image"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Photoshoot</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos
-									cumque dicta adipisci architecto culpa amet.</p>
-							</div>
-						</div>
-
-						<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-							<span class="icon">
-								<i class="icon-video"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Video Editing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos
-									cumque dicta adipisci architecto culpa amet.</p>
-							</div>
-						</div>
-
-					</div>
-
-					<div class="col-md-6 animate-box">
-						<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-							<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i
-									class="icon-video2"></i></a>
-							<div class="overlay"></div>
-						</div>
-					</div>
-				</div>
-
-
-			</div>
-		</div>
-
-
 		<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 						<h2>Soutenez-nous</h2>
-						<p></p>
+						<p>Considérant la charge de l'organisation de cet évènement, tout don en nature ou en espèces est le bienvenu. Se référer exclusivement aux numéros suivants.</p>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -738,6 +537,49 @@
 			day: d.getDate(),
 			enableUtc: false
 		});
+
+		const galeriesData = [
+			{
+				title: "Nos premiers moments",
+				cover: "images/complements/JoeletBertille_3.jpg",
+				photos: [
+					"images/complements/JoeletBertille_3.jpg",
+					"images/complements/joeletbertille_incliné.PNG"
+				]
+			},
+			{
+				title: "Notre petite famille",
+				cover: "images/complements/famille_1.jpg",
+				photos: [
+					"images/complements/famille_1.jpg",
+					"images/complements/enfants_3.jpg",
+					"images/complements/enfants_2.jpg",
+					"images/complements/enfants_1.jpg",
+				]
+			}
+		]
+
+		const displayGalleries = (galArr) => {
+			let finalHtml = "";
+			galArr.forEach(g => {
+				const thisGalCode = `
+							 <li class="one-third animate-box" data-animate-effect="fadeIn"
+								style="background-image: url(${g.cover}); ">
+								<a href="images/gallery-1.jpg">
+									<div class="case-studies-summary">
+										<span>${g.photos.length} Photos</span>
+										<h2>${g.title}</h2>
+									</div>
+								</a>
+							</li>`
+
+				finalHtml += thisGalCode;
+			})
+
+			document.getElementById("fh5co-gallery-list").innerHTML = finalHtml;
+		}
+
+		displayGalleries(galeriesData);
 	</script>
 
 </body>
