Update footer links

--- a/index.html
+++ b/index.html
@@ -475,14 +475,13 @@
 							<small class="block">&copy; 2022, House Innovation Group.</small>
 							<small class="block">Designed by <a
 									href="https://www.linkedin.com/company/house-innovation-sarl/" target="_blank">House
-									Innovation S.A.</a></small>
+									Innovation SARL</a></small>
 						</p>
 						<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://twitter.com/House_INNOV" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/housinnov/" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/company/house-innovation-sarl/" target="_blank"><i class="icon-linkedin"></i></a></li>
 						</ul>
 						</p>
 					</div>
