Conditional background image

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<li><a href="#fh5co-couple-story">Notre histoire</a></li>
 							<li><a href="#fh5co-gallery">Galerie</a></li>
 							<li><a href="#fh5co-testimonial">Honneur</a></li>
-							<li><a href="contact.html">Nous soutenir</a></li>
+							<li><a href="#fh5co-started">Nous soutenir</a></li>
 						</ul>
 					</div>
 				</div>
@@ -83,9 +83,8 @@
 			</div>
 		</nav>
 
-		<header id="fh5co-header" class="fh5co-cover" role="banner"
-			style="background-image:url(images/complements/joeletbertille_inclined_resized-transformed2.png);"
-			data-stellar-background-ratio="0.5">
+		<header id="fh5co-header" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
+			<!-- style="background-image:url(images/complements/joeletbertille_inclined_resized-transformed2.png);" -->
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -433,7 +432,7 @@
 			</div>
 		</div>
 
-		<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+		<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/complements/Douala_rp_deido.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
@@ -555,7 +554,45 @@
 					"images/complements/enfants_2.jpg",
 					"images/complements/enfants_1.jpg",
 				]
+			},
+			{
+				title: "Déménagements, installations",
+				cover: "images/complements/famille_1.jpg",
+				photos: [
+					"images/complements/famille_1.jpg",
+					"images/complements/enfants_3.jpg",
+					"images/complements/enfants_2.jpg",
+					"images/complements/enfants_1.jpg",
+				]
+			},
+			{
+				title: "Photos des enfants",
+				cover: "images/complements/enfants_2.jpg",
+				photos: [
+					"images/complements/enfants_3.jpg",
+					"images/complements/enfants_2.jpg",
+					"images/complements/enfants_1.jpg",
+				]
+			},
+			{
+				title: "Rapprochement des familles",
+				cover: "images/complements/enfants_2.jpg",
+				photos: [
+					"images/complements/enfants_3.jpg",
+					"images/complements/enfants_2.jpg",
+					"images/complements/enfants_1.jpg",
+				]
+			},
+			{
+				title: "Préparatifs du mariage",
+				cover: "images/complements/JoeletBertille_3.jpg",
+				photos: [
+					"images/complements/enfants_3.jpg",
+					"images/complements/enfants_2.jpg",
+					"images/complements/enfants_1.jpg",
+				]
 			}
+
 		]
 
 		const displayGalleries = (galArr) => {
