chore: update mariage details: témoin, gabriel, cinquantenaire

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 										<div class="event-col">
 											<i class="icon-clock"></i>
 											<span>14:00</span>
-											<span>Eglise du Centenaire</span>
+											<span>Eglise du Cinquantenaire</span>
 										</div>
 									</div>
 								</div>
@@ -259,7 +259,7 @@
 							</li>
 							<li class="timeline-inverted animate-box">
 								<div class="timeline-badge"
-									style="background-image:url(images/complements/bertille_enfants_2.jpg);"></div>
+									style="background-image:url(images/complements/gabriel.png);"></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Premier fruit de notre amour</h3>
@@ -364,6 +364,17 @@
 						<div class="col-md-12 animate-box">
 							<div class="wrap-testimony">
 								<div class="owl-carousel-fullwidth">
+									<div class="item">
+										<div class="testimony-slide active text-center">
+											<figure>
+												<img src="images/complements/gervaise_puemo.png" alt="user">
+											</figure>
+											<span>Gervaise Puemo, <a href="#" class="twitter">Témoin de la mariée</a></span>
+											<blockquote>
+												<p>Ravie d'être ta témoin, Bertille! Je te souhaite un heureux mariage et je serai là pour lancer des youyous de temps à autre! Très contente pour toi et très fière de toi!</p>
+											</blockquote>
+										</div>
+									</div>
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
