fix: gallery image association

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 				const thisGalCode = `
 							 <li class="one-third animate-box" data-animate-effect="fadeIn"
 								style="background-image: url(${g.cover}); ">
-								<a href="images/gallery-1.jpg">
+								<a href="${g.cover}">
 									<div class="case-studies-summary">
 										<span>${g.photos.length} Photos</span>
 										<h2>${g.title}</h2>
